# imgimg

./: .gitattributes  .gitignore  LICENSE  ONBOARDING.md  README.md  RELEASE_NOTES.md  SECURITY.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  state.rs
src-tauri/src/commands/: admin.rs  app_info.rs  asset_types.rs  canvas.rs  compare.rs  enhancer_presets.rs  gallery.rs  generations.rs  health.rs  mod.rs  models.rs  presets.rs  prompts.rs  saved_prompts.rs  storage.rs  updater.rs  workflow_org.rs  workflows.rs  workspace_state.rs
src-tauri/src/db/: migrations.rs  models.rs
src-tauri/src/providers/: canvas_agent.rs  comfy_pool.rs  comfy_proxy.rs  comfy_types.rs  comfy_ws.rs  common.rs  fal_proxy.rs  generation_dispatch.rs  health.rs  kie_proxy.rs  lora_service.rs  mod.rs  model_discovery.rs  openrouter_image.rs  openrouter_proxy.rs  prompt_batch.rs  prompt_enhancer.rs  prompt_keywords.rs  prompt_variants.rs  replicate_proxy.rs  schema_to_parameters.rs  workflow_manager.rs
src-tauri/src/services/: event_hub.rs  mod.rs  queue.rs  storage.rs
src-tauri/src/stores/: admin_settings.rs  asset_type_store.rs  canvas_meta.rs  canvas_state.rs  chat_thread.rs  enhancer_presets.rs  generation_store.rs  lora_settings.rs  mod.rs  pinned_workflow.rs  preset_settings.rs  saved_prompts.rs  workflow_org.rs  workflow_settings.rs  workflow_store.rs  workspace_state.rs
src-tauri/src/utils/: cursor.rs  ids.rs  mod.rs  time.rs
(+250 files in other folders)
